Split footer margin-right: -10px to two separate index and our services classes to fix margin alignment on both pages.

--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ ul {
     list-style-type: none;
 }
 
+.footer-our-svc {
+    margin-right: -10px;
+}
+
 .footer {
     display: flex;
     flex: auto;
@@ -137,7 +141,6 @@ ul {
     height: 40px;
     background-color: #074369;
     margin-left: -10px;
-    margin-right: -10px;
     margin-top: -10px;
     margin-bottom: -10px;
     justify-content: center;
